Tue Jan 11 23:16:35 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* configure.ac:

	  Added test for existence of `/dev/poll' device file.  If that
	  file exists and is readable define the "ACE_HAS_DEV_POLL"
	  preprocessor symbol.

	* m4/config_h.m4:

	  Minor preprocessor symbol documentation fixes.

Tue Jan 11 22:32:47 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* ace/Dev_Poll_Reactor.cpp (remove_handler_i):

	  Release the lock during the "close" upcall.  Fixes a deadlock
	  that occurred when cancelling a timer during removal of an event
	  handler from the reactor.  Thanks to Gao Xianchao <info at
	  socks5cn dot com> for reporting the problem and confirming that
	  this change fixes the problem.

Wed Jan 12 00:12:03 2005  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

 	* ace/OS_NS_signal.inl:

	  Fixed a compile error with the following checkin "Tue Jan 11
	  18:14:22 2005  Steve Huston  <shuston@riverace.com>". Not sure
	  whether this is going to break aCC. The existing code broke
	  atleast g++ 3.3.4. Need to sync with Steve on this.

Tue Jan 11 18:14:22 2005  Steve Huston  <shuston@riverace.com>

	* ace/OS_NS_signal.inl: Added "namespace ACE_OS" to this as some other
	  .inl files have done. This helped get HP aC++ around its confusion
	  of ACE_OS::sigaction() vs. sigaction(). Added "::" to the sigaction
	  type specifiers in the signature to resolve the confusion between
	  the sigaction type and ACE_OS::sigaction.

Mon Jan 10 12:41:23 2005  Steve Huston  <shuston@riverace.com>

	* tests/Test_Output.cpp (close): If the output_file_ pointer is
	  already 0, don't flush/close/delete it. Logging_Strategy_Test
	  does a close before the end of the program, and this will
	  cause ACE_END_TEST to close it again and crash, at least on
	  some plaforms.

Mon Jan 10 10:29:38 2005  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/templates/gnu.mpd:

          Ensure that all generated files are created before attempting to