@@ -161,7 +161,7 @@ where it announces its vote. In between those messages the member is receiving
 and processing votes from other members and can be influenced by their
 'opinion'. 
 
-In their decision-making, members follow the principle of the majority. As 
+In their decision-making members follow the principle of the majority. As 
 the voting progresses (and comes close to an end) members become more and 
 more reluctant to deviate from the decision of the majority.
 
